Fixed a slight alignment problem with the order creation form.

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,5 +1,5 @@
 #name-address {
     text-align: center;
-    min-height: 40px;
+    min-height: 30px;
     font-size: smaller;
 }
